cmake_minimum_required(VERSION 3.12)

set(PROJECT_NAME "sdlib")
project(${PROJECT_NAME})

set(SD_BUILD_SHARED_LIBS ON)
set(SD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/stable-diffusion.cpp)

if(CMAKE_SYSTEM_NAME STREQUAL "Android" AND CMAKE_SYSTEM_PROCESSOR STREQUAL "aarch64")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DANDROID_ARM_NEON=TRUE -DANDROID_TOOLCHAIN=clang -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-23")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DANDROID_ARM_NEON=TRUE -DANDROID_TOOLCHAIN=clang -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=android-23")
endif()

add_subdirectory(${SD_DIR} shared)